--- a/style.css
+++ b/style.css
@@ -51,3 +51,95 @@ body {
   transition: color 0.5s;
   color: #247967;
 }
+
+main {
+  max-width: 1440px;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+
+.block__left {
+  display: flex;
+  flex-direction: column;
+  background-color: #306374;
+  min-height: 100%;
+}
+
+.section__profile {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-width: 320px;
+  margin-bottom: 100px;
+}
+
+h1 {
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 38px;
+  letter-spacing: 12px;
+  color: #05386b;
+}
+
+h3 {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 26px;
+  color: #05386b;
+  margin-bottom: 50px;
+}
+
+.image__profile {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: min-content;
+}
+
+.image__profile img {
+  margin: 0 auto;
+  padding: auto;
+  width: 400px;
+  border-radius: 10%;
+  object-fit: cover;
+}
+
+h2 {
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 30px;
+  letter-spacing: 5px;
+  color: #2c3531;
+  padding-bottom: 20px;
+}
+
+.contact__item {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
+  padding: 25px 0px;
+}
+
+.contact__list {
+  text-decoration: none;
+}
+
+.main__link i {
+  font-size: 36px;
+  color: #72dfd0;
+}
+
+.contact__list i:hover {
+  transition: color 0.5s;
+  color: #247967;
+}
+
+.main__link:hover {
+  transition: color 0.5s;
+  color: #247967;
+}
