--- a/style.css
+++ b/style.css
@@ -143,3 +143,70 @@ h2 {
   transition: color 0.5s;
   color: #247967;
 }
+
+
+.block__right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 20px 40px;
+}
+
+p {
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #2c3531;
+  font-family: "Roboto", sans-serif;
+
+}
+
+.skills__list {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  padding: 0px;
+}
+
+.section__code {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+code {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #2c3531;
+  font-family: "Roboto", sans-serif;
+}
+
+.projects__list {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
+  padding: 0px;
+}
+
+.projects__item a {
+  text-decoration: none;
+  font-size: 22px;
+  color: #10414d;
+}
+
+.projects__item a:hover {
+  transition: .5s;
+  color: #72dfd0;
+}
+
+.courses__list {
+  list-style: none;
+  padding: 0px;
+}
+
+.language__list {
+  list-style: none;
+  padding: 0px;
+}
